Refactored for java language jdk 1.8 and language level 8